Fixed centre aligning of sponsors on /live

--- a/src/styles/live.styl
+++ b/src/styles/live.styl
@@ -96,6 +96,7 @@
 	position: absolute;
 	display: inline-block;
 	left: 50%; transform: translateX(-50%);
+	text-align: center;
 	filter: grayscale(100%) brightness(9001);
 	opacity: 0.8;
 	width: 900px;
